k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neurovent-backend
  labels:
    app: neurovent-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neurovent-backend
  template:
    metadata:
      labels:
        app: neurovent-backend
    spec:
      serviceAccountName: neurovent-backend-sa
      automountServiceAccountToken: false
      containers:
        - name: neurovent-backend
          image: az1810/events-app-backend:latest
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: neurovent-backend
spec:
  selector:
    app: neurovent-backend
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
